--- a/STM32F0/Projects/STM32F0_GPIO/Objects/STM32F0_GPIO.build_log.htm
+++ b/STM32F0/Projects/STM32F0_GPIO/Objects/STM32F0_GPIO.build_log.htm
@@ -9,137 +9,30 @@ License Information: Uladzislau Dubatouka, BNTU, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.32.0.0
-Toolchain Path:  C:\User Programs\Keil\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.14.1
-Assembler:       Armasm.exe V6.14.1
-Linker/Locator:  ArmLink.exe V6.14.1
-Library Manager: ArmAr.exe V6.14.1
-Hex Converter:   FromElf.exe V6.14.1
+Toolchain Path:  C:\User Programs\Keil\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 7 (build 960)
+Assembler:       Armasm.exe V5.06 update 7 (build 960)
+Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
+Library Manager: ArmAr.exe V5.06 update 7 (build 960)
+Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.32.0.0
 Dialog DLL:      DARMCM1.DLL V1.19.4.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TARMCM1.DLL V1.14.3.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F0\Projects\STM32F0_GPIO\STM32F0_GPIO.uvprojx
-Project File Date:  10/30/2020
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F0\Projects\STM32F0_GPIO\STM32F0_GPIO.uvprojx
+Project File Date:  11/02/2020
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.14.1', folder: 'C:\User Programs\Keil\ARM\ARMCLANG\Bin'
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F0_GPIO'
-Code/src/InitRCC.c(15): warning: In file included from...
-./Code/inc\InitRCC.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(127): warning: In file included from...
-./CMSIS/inc\core_cmInstr.h(448): warning: implicit conversion changes signedness: 'uint32_t' (aka 'unsigned int') to 'int32_t' (aka 'int') [-Wsign-conversion]
-  return(result);
-  ~~~~~~ ^~~~~~
-Code/src/InitRCC.c(15): warning: In file included from...
-./Code/inc\InitRCC.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(585): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    SCB->SHP[_SHP_IDX(IRQn)] = (SCB->SHP[_SHP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                         ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(588): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    NVIC->IP[_IP_IDX(IRQn)] = (NVIC->IP[_IP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                       ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(619): warning: function 'NVIC_SystemReset' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
-{
-^
-4 warnings generated.
-compiling InitRCC.c...
-Code/src/main.c(15): warning: In file included from...
-./Code/inc\main.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(127): warning: In file included from...
-./CMSIS/inc\core_cmInstr.h(448): warning: implicit conversion changes signedness: 'uint32_t' (aka 'unsigned int') to 'int32_t' (aka 'int') [-Wsign-conversion]
-  return(result);
-  ~~~~~~ ^~~~~~
-Code/src/main.c(15): warning: In file included from...
-./Code/inc\main.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(585): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    SCB->SHP[_SHP_IDX(IRQn)] = (SCB->SHP[_SHP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                         ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(588): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    NVIC->IP[_IP_IDX(IRQn)] = (NVIC->IP[_IP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                       ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(619): warning: function 'NVIC_SystemReset' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
-{
-^
-4 warnings generated.
 compiling main.c...
-Code/src/InitSWD.c(15): warning: In file included from...
-./Code/inc\InitSWD.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(127): warning: In file included from...
-./CMSIS/inc\core_cmInstr.h(448): warning: implicit conversion changes signedness: 'uint32_t' (aka 'unsigned int') to 'int32_t' (aka 'int') [-Wsign-conversion]
-  return(result);
-  ~~~~~~ ^~~~~~
-Code/src/InitSWD.c(15): warning: In file included from...
-./Code/inc\InitSWD.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(585): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    SCB->SHP[_SHP_IDX(IRQn)] = (SCB->SHP[_SHP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                         ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(588): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    NVIC->IP[_IP_IDX(IRQn)] = (NVIC->IP[_IP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                       ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(619): warning: function 'NVIC_SystemReset' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
-{
-^
-4 warnings generated.
-compiling InitSWD.c...
-Code/src/InitGPIO.c(15): warning: In file included from...
-./Code/inc\InitGPIO.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(127): warning: In file included from...
-./CMSIS/inc\core_cmInstr.h(448): warning: implicit conversion changes signedness: 'uint32_t' (aka 'unsigned int') to 'int32_t' (aka 'int') [-Wsign-conversion]
-  return(result);
-  ~~~~~~ ^~~~~~
-Code/src/InitGPIO.c(15): warning: In file included from...
-./Code/inc\InitGPIO.h(18): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(585): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    SCB->SHP[_SHP_IDX(IRQn)] = (SCB->SHP[_SHP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                         ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(588): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    NVIC->IP[_IP_IDX(IRQn)] = (NVIC->IP[_IP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                       ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(619): warning: function 'NVIC_SystemReset' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
-{
-^
-4 warnings generated.
 compiling InitGPIO.c...
-CMSIS/src/system_stm32f0xx.c(99): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(127): warning: In file included from...
-./CMSIS/inc\core_cmInstr.h(448): warning: implicit conversion changes signedness: 'uint32_t' (aka 'unsigned int') to 'int32_t' (aka 'int') [-Wsign-conversion]
-  return(result);
-  ~~~~~~ ^~~~~~
-CMSIS/src/system_stm32f0xx.c(99): warning: In file included from...
-./CMSIS/inc\stm32f0xx.h(479): warning: In file included from...
-./CMSIS/inc/core_cm0.h(585): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    SCB->SHP[_SHP_IDX(IRQn)] = (SCB->SHP[_SHP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                         ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(588): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
-    NVIC->IP[_IP_IDX(IRQn)] = (NVIC->IP[_IP_IDX(IRQn)] & ~(0xFF << _BIT_SHIFT(IRQn))) |
-                                                       ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-./CMSIS/inc/core_cm0.h(619): warning: function 'NVIC_SystemReset' could be declared with attribute 'noreturn' [-Wmissing-noreturn]
-{
-^
-CMSIS/src/system_stm32f0xx.c(132): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-            ^
-CMSIS/src/system_stm32f0xx.c(132): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-    ^
-5 warnings generated.
-compiling system_stm32f0xx.c...
 linking...
-Program Size: Code=884 RO-data=196 RW-data=0 ZI-data=1632  
+Program Size: Code=1076 RO-data=196 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
-".\Objects\STM32F0_GPIO.axf" - 0 Error(s), 21 Warning(s).
+".\Objects\STM32F0_GPIO.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -152,7 +45,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F0xx_DFP\2.1.0\Drivers\CMSIS\Device\ST\STM32F0xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
