--- a/STM32F4/Projects/STM32F4_SWD/Objects/STM32F4_SWD.build_log.htm
+++ b/STM32F4/Projects/STM32F4_SWD/Objects/STM32F4_SWD.build_log.htm
@@ -28,14 +28,14 @@ Project File Date:  11/10/2020
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F4_SWD'
 assembling startup_stm32f411xe.s...
-compiling InitSWD.c...
 compiling main.c...
-compiling system_stm32f4xx.c...
+compiling InitSWD.c...
 compiling InitRCC.c...
+compiling system_stm32f4xx.c...
 linking...
 Program Size: Code=844 RO-data=424 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
-".\Objects\STM32F4_RCC_PLL_100MHz.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\STM32F4_SWD.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -48,7 +48,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.15.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
