--- a/STM32F4/Setup files/STM32F4_RCC_PLL_100MHz/Objects/STM32F4_RCC_PLL_100MHz.build_log.htm
+++ b/STM32F4/Setup files/STM32F4_RCC_PLL_100MHz/Objects/STM32F4_RCC_PLL_100MHz.build_log.htm
@@ -22,17 +22,18 @@ Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
 C:\Users\u.dubatouka\Documents\STM32_Lib\STM32F4\Setup files\STM32F4_RCC_PLL_100MHz\STM32F4_RCC_PLL_100MHz.uvprojx
-Project File Date:  07/19/2021
+Project File Date:  07/20/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Program Files\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'STM32F4_RCC_PLL_100MHz'
 assembling startup_stm32f411xe.s...
-compiling main.c...
+compiling InitSWD.c...
 compiling InitRCC.c...
+compiling main.c...
 compiling system_stm32f4xx.c...
 linking...
-Program Size: Code=1384 RO-data=424 RW-data=0 ZI-data=1632  
+Program Size: Code=1124 RO-data=424 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
 ".\Objects\STM32F4_RCC_PLL_100MHz.axf" - 0 Error(s), 0 Warning(s).
 
@@ -47,7 +48,7 @@ Package Vendor: Keil
   C:\Users\u.dubatouka\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.15.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
